# citizen-hub

./: .gitignore  Anchor.toml  CLAUDE.md  Dockerfile  QUICK_START.md  README.md  devnet.json  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
config/: program-config.json
programs/citizenhub-program/: Cargo.toml
programs/citizenhub-program/src/: lib.rs
scripts/: complete-initialization.js  initialize-smart-contract.js  initialize-smart-contract.ts  initialize.ts  sync-proposals-onchain.js
sql/: 001_create_tables.sql  002_seed_data.sql  003_add_collateral_system.sql  004_update_vote_scale.sql  add_onchain_fields.sql  init.sql
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/initialize/: page.tsx
src/app/admin/mint-tokens/: page.tsx
src/app/airdrop/: page.tsx
src/app/all/: page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/cron/daily-status-update/: route.ts
src/app/api/db/migrate/: route.ts
src/app/api/proposals/: route.ts
src/app/approved/: page.tsx
src/app/auth/error/: page.tsx
src/app/auth/signin/: page.tsx
src/app/auth/signup/: page.tsx
src/app/dashboard/: page.tsx
src/app/mypage/: page.tsx
src/app/proposal/[id]/: page.tsx
src/app/proposal/submit/: page.tsx
src/app/transfer/: page.tsx
src/components/: HeroSection.tsx  Layout.tsx  LoadingSpinner.tsx  Navbar.tsx  PROSBalance.tsx  ProposalCard.tsx  WalletButton.tsx
src/hooks/: useWallet.ts
src/lib/: database.ts  db.ts  idl.json  program.ts  solana.ts
src/types/: next-auth.d.ts
(+8 files in other folders)
